# multica-integration-discord

./: .env.example  .gitignore  README.md  jest.config.js  package-lock.json  package.json  pyproject.toml
python-bot/: .env.example  .gitignore  README.md  pyproject.toml
python-bot/src/multica_discord/: __init__.py  __main__.py  bot.py  config.py  multica_client.py  parser.py
python-bot/tests/: test_bot.py  test_config.py  test_multica_client.py  test_parser.py
src/: index.ts  worker.ts
src/__tests__/: worker.test.ts
src/alerts/: formatter.ts  pipeline.ts
src/alerts/__tests__/: formatter.test.ts  pipeline.test.ts
src/delivery/: discord.ts
src/delivery/__tests__/: discord.bot.test.ts  discord.test.ts
src/events/: types.ts
src/multica_discord/: __main__.py  bot.py  config.py  multica_client.py  validation.py
src/sources/: multica.ts
src/sources/__tests__/: multica.test.ts
src/util/: dedupe.ts
src/util/__tests__/: dedupe.test.ts
tests/: test_bot.py  test_config.py  test_multica_client.py  test_validation.py
