[project]
name = "multica-discord"
version = "0.1.0"
description = "Discord bot for Multica platform integration"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.5",
    "httpx>=0.28",
    "pydantic>=2.12",
    "pydantic-settings>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4",
    "pytest-asyncio>=0.26",
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
addopts = "--strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"