[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multica-discord-bot"
version = "0.1.0"
description = "Interactive Discord bot for Multica workspace actions"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "discord.py>=2.5.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-httpx>=0.34.0",
    "ruff>=0.9.0",
    "respx>=0.22.0",
]

[project.scripts]
multica-discord-bot = "multica_discord.bot:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D100", "D104", "D107", "D203", "D213"]
per-file-ignores = { "tests/**/*.py" = ["D"] }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["multica_discord"]

[tool.hatch.build.targets.wheel]
packages = ["src/multica_discord"]
